<resources>
    <string name="app_name">HealthNotes</string>

    <!--Activity Titles-->
    <string name="prescriptions_title">Prescriptions</string>


    <!--Button Text-->
    <string name="btn_home">Home</string>
    <string name="btn_add">Add</string>
    <string name="btn_list">List</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_take">Take</string>
    <string name="btn_notes">Notes</string>
    <string name="btn_info">Info</string>

    <!--First/Last name of User -->
    <string name="first">Dylan</string>
    <string name="last">Anderson</string>

    <!--Default Text-->
    <string name="app_default_txt">Default</string>

    <!--
        G	Era designator (before christ, after christ)
        y	Year (e.g. 12 or 2012). Use either yy or yyyy.
        M	Month in year. Number of M's determine length of format (e.g. MM, MMM or MMMMM)
        d	Day in month. Number of d's determine length of format (e.g. d or dd)
        h	Hour of day, 1-12 (AM / PM) (normally hh)
        H	Hour of day, 0-23 (normally HH)
        m	Minute in hour, 0-59 (normally mm)
        s	Second in minute, 0-59 (normally ss)
        S	Millisecond in second, 0-999 (normally SSS)
        E	Day in week (e.g Monday, Tuesday etc.)
        D	Day in year (1-366)
        F	Day of week in month (e.g. 1st Thursday of December)
        w	Week in year (1-53)
        W	Week in month (0-5)
        a	AM / PM marker
        k	Hour in day (1-24, unlike HH's 0-23)
        K	Hour in day, AM / PM (0-11)
        z	Time Zone
        '	Escape for text delimiter
        '	Single quote
    -->
    <!--Date Formats-->
    <string name="dateFormatMMddYYYY">MMddyyyy</string>


    <!--notes-->
    <string name="contentDesc_medImage">Image of Medicine</string>


</resources>
