<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/script_layout"
    android:layout_width="match_parent"
    android:layout_height="170dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="170dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/hnRed"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/takeAtLabelTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="Take at: "
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/takeAtDateTextView"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_default_txt"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/takeAtLabelTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/app_default_txt"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeAtDateTextView" />

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/app_default_txt"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/contentDesc_medImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <Button
        android:id="@+id/takeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_take"
        android:textColor="@color/hnBlack"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView" />

    <Button
        android:id="@+id/notesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_notes"
        android:textColor="@color/hnBlack"
        app:layout_constraintStart_toEndOf="@+id/takeButton"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_info"
        android:textColor="@color/hnBlack"
        app:layout_constraintStart_toEndOf="@+id/notesButton"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>