<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/script_layout"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:paddingBottom="3dp"
    app:layout_constraintBottom_toBottomOf="@+id/notesButton">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/hnGreenDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="@+id/notesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/takeAtLabelTextView"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/toolbar2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:text="Due:"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/takeAtDateTextView"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/takeAtLabelTextView"
        android:text="@string/app_default_txt"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/takeAtLabelTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/takeAtDateTextView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:text="@string/app_default_txt"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeAtDateTextView" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructionsTextView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/notesButton"
        android:background="@color/hnGreyDark"
        android:text="@string/btn_info"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/notesButton"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView" />

    <Button
        android:id="@+id/takeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructionsTextView"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/imageView"
        android:background="@color/hnGreyDark"
        android:text="@string/btn_take"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView" />

    <Button
        android:id="@+id/notesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructionsTextView"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/takeButton"
        android:background="@color/hnGreyDark"
        android:text="@string/btn_notes"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/takeButton"
        app:layout_constraintTop_toBottomOf="@id/instructionsTextView" />

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:text="@string/app_default_txt"
        android:textColor="@color/hnWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_below="@+id/instructionsTextView"
        android:layout_alignStart="@+id/instructionsTextView"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/contentDesc_medImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

</RelativeLayout>