<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Profile"
            android:textColor="@color/hnWhite"
            android:textSize="30sp"></TextView>

    </androidx.appcompat.widget.Toolbar>

    <!--Header button (Home)-->
<!--    <Button-->
<!--        android:id="@+id/homeButton"-->
<!--        android:layout_width="75dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:text="Home"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/prescriptionsTopToolbar"-->
<!--        app:layout_constraintStart_toStartOf="@+id/prescriptionsTopToolbar"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_home_white_48dp"
        android:contentDescription="@string/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_white_48dp"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <!--Profile Picture-->
    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"></ImageView>

    <!--First Name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="210dp"
        android:padding="5dp"
        android:textSize="40dp"></TextView>

    <!--Last Name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="210dp"
        android:padding="5dp"
        android:textSize="40dp"></TextView>

    <!--User Details-->
    <TextView
        android:id="@+id/userDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username: danderson1 \nEmail: danderson1@gmail.com
                     \nAge: 21 \nWeight: 140lbs \nHeight: 5'10&quot; \nSex: M"
        android:lineSpacingExtra="15dp"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:textSize="24dp"></TextView>

    <!--First button (Edit Profile)-->
    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="530dp"
        android:background="@color/hnBlueDark"
        android:ellipsize="none"
        android:text="Edit Profile"
        android:textColor="@color/hnWhite"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userDetails" />

    <!--Second button (Log Out)-->
    <Button
        android:id="@+id/logOutButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="600dp"
        android:background="@color/hnBlueDark"
        android:ellipsize="none"
        android:text="Log Out"
        android:textColor="@color/hnWhite"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileButton" />

</RelativeLayout>